Use dict for schema, change devtool & openapi
