# src/app/models/schema_models.py
@@ -1,4 +1,5 @@
 from dataclasses import dataclass
+from typing import Optional
 
 from pydantic import BaseModel, Field
 
@@ -14,15 +15,3 @@ class SchemaMetadataWithoutGuid:
 @dataclass
 class SchemaMetadata(SchemaMetadataWithoutGuid):
     guid: str
-
-
-class Schema(BaseModel):
-    survey_id: str
-    title: str
-    description: str
-    schema_version: str
-    sample_unit_key_field: str
-    properties: list
-    examples: list
-    d_schema: str = Field(alias="$schema")
-    d_id: str = Field(alias="$id")
